css/styles.css
/* ... */
html {
  height: 100%;
  scroll-padding-top: calc(4.5rem - 1px);
}

body {
  width: 100%;
  height: 100%;
}

.page-section {
  padding: 6rem 0;
}

.text-white-75 {
  color: rgba(255, 255, 255, 0.75) !important;
}

.btn-xl {
  padding: 1.25rem 2.25rem;
  font-size: 0.85rem;
  font-weight: 700;
  text-transform: uppercase;
  border: none;
  border-radius: 10rem;
}

.btn-not-that-large {
  padding: 0.85rem 2.25rem;
  font-size: 0.85rem;
  font-weight: 700;
  border: none;
  border-radius: 10rem;
}

hr.divider {
  height: 0.2rem;
  max-width: 3.25rem;
  margin: 1.5rem auto;
  background-color: #f4623a;
  opacity: 1;
}

hr.divider-light {
  background-color: #fff;
}

#mainNav {
  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  background-color: #fff;
  transition: background-color 0.2s ease;
}
#mainNav .navbar-brand {
  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #212529;
}
#mainNav .navbar-nav .nav-item .nav-link {
  color: #6c757d;
  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  font-size: 0.9rem;
  padding: 0.75rem 0;
}
#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
  color: #f4623a;
}
#mainNav .navbar-nav .nav-item .nav-link.active {
  color: #f4623a !important;
}
@media (min-width: 992px) {
  #mainNav {
    box-shadow: none;
    background-color: transparent;
  }
  #mainNav .navbar-brand {
    color: rgba(255, 255, 255, 0.7);
  }
  #mainNav .navbar-brand:hover {
    color: #fff;
  }
  #mainNav .navbar-nav .nav-item .nav-link {
    color: rgba(255, 255, 255, 0.7);
    padding: 0 1rem;
  }
  #mainNav .navbar-nav .nav-item .nav-link:hover {
    color: #fff;
  }
  #mainNav .navbar-nav .nav-item:last-child .nav-link {
    padding-right: 0;
  }
  #mainNav.navbar-shrink {
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: #fff;
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: #212529;
  }
  #mainNav.navbar-shrink .navbar-brand:hover {
    color: #f4623a;
  }
  #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
    color: #212529;
  }
  #mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
    color: #f4623a;
  }
}

header.masthead {
  padding-top: 10rem;
  padding-bottom: calc(10rem - 4.5rem);
  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/bg-masthead.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}
header.masthead h1, header.masthead .h1 {
  font-size: 2.25rem;
}
@media (min-width: 992px) {
  header.masthead {
    height: 100vh;
    min-height: 40rem;
    padding-top: 4.5rem;
    padding-bottom: 0;
  }
  header.masthead p {
    font-size: 1.15rem;
  }
  header.masthead h1, header.masthead .h1 {
    font-size: 3rem;
  }
}
@media (min-width: 1200px) {
  header.masthead h1, header.masthead .h1 {
    font-size: 3.5rem;
  }
}

#medium .container-fluid, #medium .container-sm, #medium .container-md, #medium .container-lg, #medium .container-xl, #medium .container-xxl {
  max-width: 1920px;
}
#medium .container-fluid .medium-box, #medium .container-sm .medium-box, #medium .container-md .medium-box, #medium .container-lg .medium-box, #medium .container-xl .medium-box, #medium .container-xxl .medium-box {
  position: relative;
  display: block;
}
#medium .container-fluid .medium-box .medium-box-caption, #medium .container-sm .medium-box .medium-box-caption, #medium .container-md .medium-box .medium-box-caption, #medium .container-lg .medium-box .medium-box-caption, #medium .container-xl .medium-box .medium-box-caption, #medium .container-xxl .medium-box .medium-box-caption {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 100%;
  height: 100%;
  position: absolute;
  bottom: 0;
  text-align: center;
  opacity: 0;
  color: #fff;
  background: rgba(244, 98, 58, 0.9);
  transition: opacity 0.25s ease;
  text-align: center;
}
#medium .container-fluid .medium-box .medium-box-caption .project-category, #medium .container-sm .medium-box .medium-box-caption .project-category, #medium .container-md .medium-box .medium-box-caption .project-category, #medium .container-lg .medium-box .medium-box-caption .project-category, #medium .container-xl .medium-box .medium-box-caption .project-category, #medium .container-xxl .medium-box .medium-box-caption .project-category {
  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-size: 0.85rem;
  font-weight: 600;
  text-transform: uppercase;
}
#medium .container-fluid .medium-box .medium-box-caption .project-name, #medium .container-sm .medium-box .medium-box-caption .project-name, #medium .container-md .medium-box .medium-box-caption .project-name, #medium .container-lg .medium-box .medium-box-caption .project-name, #medium .container-xl .medium-box .medium-box-caption .project-name, #medium .container-xxl .medium-box .medium-box-caption .project-name {
  font-size: 1.2rem;
}
#medium .container-fluid .medium-box:hover .medium-box-caption, #medium .container-sm .medium-box:hover .medium-box-caption, #medium .container-md .medium-box:hover .medium-box-caption, #medium .container-lg .medium-box:hover .medium-box-caption, #medium .container-xl .medium-box:hover .medium-box-caption, #medium .container-xxl .medium-box:hover .medium-box-caption {
  opacity: 1;
}


#about img {
  border-radius: 10px;
}
/* ... */

